Fix spacing above first h2

--- a/docs/theme/sass/_theme_layout.sass
+++ b/docs/theme/sass/_theme_layout.sass
@@ -1433,6 +1433,10 @@ body
         max-width: 745px
         margin-top: 50px
 
+      .h3-section,
+      .h4-section,
+      .h5-section,
+      .h6-section
         &:first-of-type
           margin-top: 20px
 
@@ -1531,6 +1535,10 @@ body
           max-width: 745px
           margin-top: 35px
 
+        .h3-section,
+        .h4-section,
+        .h5-section,
+        .h6-section
           &:first-of-type
             margin-top: 15px
 
